--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "task_management",
-  "homepage": "https://SurenZaqaryan.github.io/task_management",
+  "homepage": "https://surenzaqaryan.github.io/task_management",
   "private": true,
   "version": "0.0.0",
   "type": "module",
